# Takumi

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  SECURITY.md  docker-compose.yml  index.html  metadata.json  package-lock.json  package.json
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: b2f1a9c4d7e3_add_organizations_multi_tenancy.py  f34dff938c10_initial_schema_with_all_tables.py
backend/app/: config.py  db.py  main.py  observability.py  seed_slots.py
backend/app/api/: agent.py  auth.py  depots.py  matrix.py  optimize.py  orders.py  predictions.py  simulation.py  stops.py  vehicles.py  ws.py
backend/app/models/: __init__.py  agent_interaction.py  availability_history.py  depot.py  enums.py  order.py  organization.py  route.py  route_stop.py  simulation_run.py  slot.py  stop.py  user.py  vehicle.py
backend/app/schemas/: __init__.py
backend/app/security/: auth.py  deps.py  ratelimit.py
backend/app/services/: cache.py  matrix.py
backend/app/services/agent/: guards.py  intent.py  loop.py  tools.py
backend/app/services/ml/: model.py  predict.py
backend/app/services/optimizer/: benchmark.py  solver.py
backend/app/services/simulation/: engine.py
backend/app/synthetic/: generator.py
backend/tests/: conftest.py
backend/tests/security/: test_agent_injection.py  test_hardening.py  test_ratelimit.py  test_tenant_isolation.py
backend/tests/unit/: test_agent.py  test_auth.py  test_benchmark.py  test_health.py  test_matrix.py  test_ml.py  test_models.py  test_optimizer.py  test_simulation.py
data/osm/: README.md
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  seedData.test.ts  seedData.ts  store.ts  types.ts
frontend/src/api/: client.ts  health.ts
frontend/src/components/: AgentEventToast.tsx  BorderGlow.tsx  CarbonTracker.tsx  Dashboard.tsx  DeliveryDetail.tsx  ErrorBoundary.tsx  Ferrofluid.tsx  LandingPage.tsx  LoginGate.tsx  MLHealth.tsx  RedeliveryProfiler.tsx  RouteMap.tsx  SidebarNav.tsx  Simulation.tsx  TopBar.tsx  ui.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/: ops.ts
frontend/src/pages/: AgentConsole.tsx  DashboardPage.tsx  LoginPage.tsx  MapPage.tsx  SimulationPage.tsx
frontend/src/store/: app.ts
scripts/: build-osrm-graph.sh
src/: App.tsx  index.css  mockData.ts  store.ts  types.ts  utils.ts
src/components/: AgentEventToast.tsx  Dashboard.tsx  DeliveryDetail.tsx  ErrorBoundary.tsx  Ferrofluid.tsx  LandingPage.tsx  MLHealth.tsx  RedeliveryProfiler.tsx  RouteMap.tsx  SidebarNav.tsx  Simulation.tsx  TopBar.tsx
