[project]
name = "takumiroute-backend"
version = "0.1.0"
description = "TakumiRoute delivery optimization engine backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.136.3",
    "uvicorn[standard]>=0.34.0,<1.0",
    "sqlalchemy[asyncio]==2.0.50",
    "asyncpg>=0.30.0,<1.0",
    "alembic>=1.15.0,<2.0",
    "geoalchemy2>=0.17.0,<1.0",
    "pydantic>=2.11.0,<3.0",
    "pydantic-settings>=2.9.0,<3.0",
    "ortools==9.15.6755",
    "pyvrp==0.13.3",
    "lightgbm==4.6.0",
    "scikit-learn>=1.6.0,<2.0",
    "pandas>=2.2.0,<3.0",
    "numpy>=2.0.0,<3.0",
    "redis>=5.0.0,<6.0",
    "httpx>=0.28.0,<1.0",
    "structlog>=25.0.0,<26.0",
    "sentry-sdk[fastapi]>=2.0.0,<3.0",
    "passlib[argon2]>=1.7.4,<2.0",
    "argon2-cffi>=23.1.0,<24.0",
    "PyJWT[crypto]>=2.10.0,<3.0",
    "slowapi>=0.1.9,<1.0",
    "websockets>=14.0,<15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.25.0,<1.0",
    "ruff>=0.11.0,<1.0",
    "black>=25.0,<26.0",
    "mypy>=1.15.0,<2.0",
    "bandit>=1.9.0,<2.0",
    "pip-audit>=2.9.0,<3.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "S",
    "B",
    "A",
    "C4",
    "DTZ",
    "T20",
    "ICN",
    "PIE",
    "PT",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "TCH",
    "ARG",
    "ERA",
    "PL",
    "RUF",
]
ignore = [
    "S101",     # assert is fine (tests + invariant checks)
    "PLR0913",  # many args is acceptable for solver/sim entry points
    "PLR2004",  # magic-value comparisons read clearly here
    "PLR0915",  # the OR-Tools solver is necessarily long
    "PLC0415",  # deferred imports are used deliberately (circular-import safety)
    "S311",     # RNG is reproducible simulation seeding, never cryptographic
    "ARG001",   # framework-required params (e.g. slowapi's `request`)
    "ARG002",
    "UP042",    # (str, Enum) pattern is intentional over StrEnum
    "N803",     # ML convention: X / y feature-matrix argument names
    "N806",     # ML convention: X_train, X_test local names
    "TC001",    # do not force first-party imports into TYPE_CHECKING blocks
    "TC002",
    "TC003",
    "RUF001",   # Japanese addresses + em-dashes are intentional unicode
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.flake8-bugbear]
# FastAPI/Pydantic dependency-injection defaults are not mutable-default bugs.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Header",
    "fastapi.Body",
    "pydantic.Field",
]

[tool.ruff.lint.per-file-ignores]
# Test fixtures use literal credentials and private-member access freely.
"tests/**" = ["S105", "S106", "SLF001", "PT018"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.black]
target-version = ["py312"]
line-length = 88

[tool.mypy]
python_version = "3.12"
strict = true
# Scientific/routing libs (ortools, sklearn, pandas, …) ship no type info, so
# their return values surface as Any; flagging every such return is noise.
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "ortools.*",
    "pyvrp.*",
    "lightgbm.*",
    "sklearn.*",
    "pandas.*",
    "passlib.*",
    "geoalchemy2.*",
    "slowapi.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.bandit]
# B311: the only `random` usage is reproducible, explicitly-seeded synthetic
# data + simulation generation — never for security/cryptographic purposes.
skips = ["B311"]
